kubernetes/ejemplos/load_balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: apache-svc
status:
  loadBalancer:
    ingress:
    - ip: 37.55.34.23
