kubernetes/ejemplos/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  ports:
  - name: mysql
    targetPort: 3306
    port: 3306
    nodePort: 30040
  type: NodePort
  selector:
    app: mypod
